--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ license = "MIT"
 requires-python = ">=3.12"
 dependencies = [
     "pydantic (>=2.10.6,<3.0.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "ping3 (>=4.0.8,<5.0.0)"
 ]
 
 [tool.poetry.scripts]
