--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.12"
 dependencies = [
     "pydantic (>=2.10.6,<3.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "ping3 (>=4.0.8,<5.0.0)"
+    "ping3 (>=4.0.8,<5.0.0)",
+    "click (>=8.1.8,<9.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)"
 ]
 
 [tool.poetry.scripts]
@@ -24,6 +26,7 @@ ruff = "^0.11.2"
 black = "^25.1.0"
 isort = "^6.0.1"
 pytest = "^8.3.5"
+coverage = "^7.7.1"
 
 [tool.black]
 line_length = 88
