--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name="jheddings", email="jheddings@gmail.com" }
 ]
 license = "MIT"
-#readme = "README.md"
+readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pydantic (>=2.10.6,<3.0.0)",
